--- a/source/documentation/rest/index.html
+++ b/source/documentation/rest/index.html
@@ -12,7 +12,7 @@ redirect_from:
                     <title></title>
                     <h1 class="title">REST API Documentation</h1>
                     <p>This document describes the PagerDuty REST API, which allows users to achieve most tasks that can be done from the web UI programmatically. The API accepts JSON and form encoded content as input. The output is always in JSON (or empty, in the case of DELETE requests).</p>
-                    <p>Check out the pages below for general information about all of our REST APIs. To get right to it and dig into specific APIs, use the navigation on the right side of this site.</p>
+                    <p>Check out the pages below for general information about all of our REST APIs. To get right to it and dig into specific APIs, use the navigation on the left side of this site.</p>
                     <h3>General Information</h3>
                     <div class="table-container">
                       <table class="table table-striped">
