General clean up

--- a/source/documentation/code/disclaimer.html
+++ b/source/documentation/code/disclaimer.html
@@ -5,14 +5,13 @@ permalink: /documentation/code/disclaimer/
 redirect_from:
   - /documentation/code/disclaimer.html
 ---
-<ul class="breadcrumb"><li><a href="../code.html">Code</a></li><span class="divider">/</span><li>Disclaimer</li></ul>
-<div class='section'>
-<title></title>
-<h1 class="title">Disclaimer for developer.pagerduty.com</h1>
-<p>
-Disclaimer: THE SAMPLE CODE ON HTTP://DEVELOPER.PAGERDUTY.COM/ IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL PAGERDUTY OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) SUSTAINED BY YOU OR A THIRD PARTY, HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT ARISING IN ANY WAY OUT OF THE USE OF THIS SAMPLE CODE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-</p>
-<p>
-Code on http://developer.pagerduty.com/ is not covered by any PagerDuty Service Level Agreements.
-</p>
-</div>
+                <ul class="breadcrumb">
+                  <li><a href="../code.html">Code</a></li>
+                  <span class="divider">/</span>
+                  <li>Disclaimer</li>
+                </ul>
+                <div class='section'>
+                  <h1 class="title">Disclaimer for developer.pagerduty.com</h1>
+                  <p>Disclaimer: THE SAMPLE CODE ON HTTP://DEVELOPER.PAGERDUTY.COM/ IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL PAGERDUTY OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) SUSTAINED BY YOU OR A THIRD PARTY, HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT ARISING IN ANY WAY OUT OF THE USE OF THIS SAMPLE CODE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+                  <p>Code on http://developer.pagerduty.com/ is not covered by any PagerDuty Service Level Agreements.</p>
+                </div>
