--- a/source/documentation/code/index.html
+++ b/source/documentation/code/index.html
@@ -36,10 +36,10 @@ redirect_from:
                       </tr>
                     </thead>
                     <tbody>
-                    {% for sample in site.data.code %}
+                    {% for code in site.data.code %}
                       <tr>
-                        <td><a href="{{ sample.url }}"</a>{{ sample.name }}</td>
-                        <td>{{ sample.description }}</td>
+                        <td><a href="{{ code.url }}"</a>{{ code.name }}</td>
+                        <td>{{ code.description }}</td>
                       </tr>
                     {% endfor %}
                     </tbody>
