--- a/source/documentation/code/tools.html
+++ b/source/documentation/code/tools.html
@@ -47,5 +47,5 @@ redirect_from:
                   {% endif %}
                 {% endfor %}
                   </table>
-                  <p>Please review the <a href='disclaimer.html'>Disclaimer</a> below prior to downloading sample code.</p>
+                  <p>Please review the <a href='disclaimer.html'>Disclaimer</a> prior to downloading sample code.</p>
                 </div>
