Standardize a few pages and break out breadcrumbs so we can dynamically render them

--- a/source/documentation/code/index.html
+++ b/source/documentation/code/index.html
@@ -4,9 +4,8 @@ layout: main
 permalink: /documentation/code/
 redirect_from:
   - /documentation/code.html
+breadcrumbs: true
 ---
-                <ul class="breadcrumb"><li>Code</li></ul>
-                <div class='section'>
                   <h1 class="title">Code written with the PagerDuty API</h1>
                   <p>PagerDuty has a very active developer community, and we've gathered some of the best tools here to share:</p>
                   <table class='table table-striped'>
@@ -45,4 +44,3 @@ redirect_from:
                     </tbody>
                   </table>
                   <p>Please review the <a href='disclaimer.html'>Disclaimer</a> prior to downloading sample code.</p>
-                </div>
