--- a/source/documentation/code/libraries.html
+++ b/source/documentation/code/libraries.html
@@ -4,9 +4,11 @@ layout: main
 permalink: /documentation/code/libraries/
 redirect_from:
   - /documentation/code/libraries.html
+breadcrumbs: true
+nav:
+  - title: Code
+    url: /documentation/code/
 ---
-                <ul class="breadcrumb"><li><a href="../code.html">Code</a></li><span class="divider">/</span><li>Libraries</li></ul>
-                  <div class='section'>
                     <h1 class="title">PagerDuty API Libraries</h1>
                     <p>A number of our users have contributed open source libraries:</p>
                     <table class='table table-striped'>
@@ -26,4 +28,3 @@ redirect_from:
                       {% endfor %}
                     </table>
                     <p>Please review the <a href='disclaimer.html'>Disclaimer</a> prior to downloading sample code.</p>
-                  </div>
