--- a/source/documentation/rest/authentication.html
+++ b/source/documentation/rest/authentication.html
@@ -4,14 +4,11 @@ layout: main
 permalink: /documentation/rest/authentication/
 redirect_from:
   - /documentation/rest/authentication.html
+breadcrumbs: true
+nav:
+  - title: REST API
+    url: /documentation/rest/
 ---
-                  <ul class="breadcrumb">
-                    <li><a href="../rest.html">REST API</a></li>
-                    <span class="divider">/</span>
-                    <li>Authentication</li>
-                  </ul>
-                  <div class='section'>
-                    <title></title>
                     <h1 class="title">API Authentication</h1>
                     <h2>API Token Authentication</h2>
                     <p>Our REST APIs support token authentication. Only an account administrator can access or <a href="http://support.pagerduty.com/entries/23761081-Generating-an-API-Key">generate API key tokens</a>.</p>
@@ -21,4 +18,3 @@ redirect_from:
                       <h4>Important!</h4>
                       All API requests must be made over <strong>HTTPS</strong>.Calls made over plain HTTP will be redirected to HTTPS.
                     </div>
-                  </div>
