--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,6 @@
 ---
 title: PagerDuty Developer - Home
-layout: main
+layout: index
 ---
                   <div class='landing'>
                     <div class='get-started'>
