--- a/source/documentation/code/tools.html
+++ b/source/documentation/code/tools.html
@@ -4,9 +4,11 @@ layout: main
 permalink: /documentation/code/tools/
 redirect_from:
   - /documentation/code/tools.html
+breadcrumbs: true
+nav:
+  - title: Code
+    url: /documentation/code/
 ---
-                <ul class="breadcrumb"><li><a href="../code.html">Code</a></li><span class="divider">/</span><li>Tools</li></ul>
-                <div class='section'>
                   <h1 class="title">PagerDuty API-based Tools</h1>
                   <p>A number of our users have built tools on top of PagerDuty:</p>
                   <table class='table table-striped'>
@@ -48,4 +50,3 @@ redirect_from:
                 {% endfor %}
                   </table>
                   <p>Please review the <a href='disclaimer.html'>Disclaimer</a> prior to downloading sample code.</p>
-                </div>
