--- a/source/documentation/rest/index.html
+++ b/source/documentation/rest/index.html
@@ -22,19 +22,19 @@ redirect_from:
                         </thead>
                         <tbody>
                           <tr>
-                            <td><a href="authentication.html">Authentication</a></td>
+                            <td><a href="/documentation/rest/authentication/">Authentication</a></td>
                             <td>How to access the PagerDuty API.</td>
                           </tr>
                           <tr>
-                            <td><a href="errors.html">Errors</a></td>
+                            <td><a href="/documentation/rest/errors/">Errors</a></td>
                             <td>How errors are handled.</td>
                           </tr>
                           <tr>
-                            <td><a href="types.html">Types</a></td>
+                            <td><a href="/documentation/rest/types/">Types</a></td>
                             <td>How to format various data types.</td>
                           </tr>
                           <tr>
-                            <td><a href="pagination.html">Pagination</a></td>
+                            <td><a href="/documentation/rest/pagination/">Pagination</a></td>
                             <td>How data sets are paginated.</td>
                           </tr>
                         </tbody>
