--- a/source/documentation/rest/types.html
+++ b/source/documentation/rest/types.html
@@ -6,7 +6,7 @@ redirect_from:
   - /documentation/rest/types.html
 ---
                   <ul class="breadcrumb">
-                    <li><a href="../rest.html">REST API</a></li>
+                    <li><a href="/documentation/rest">REST API</a></li>
                     <span class="divider">/</span>
                     <li>Types</li>
                   </ul>
