--- a/source/documentation/rest/webhooks.html
+++ b/source/documentation/rest/webhooks.html
@@ -5,7 +5,7 @@ permalink: /documentation/rest/webhooks/
 redirect_from:
   - /documentation/rest/webhooks.html
 ---
-<ul class="breadcrumb"><li><a href="../rest.html">REST API</a></li><span class="divider">/</span><li>Webhooks</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li>Webhooks</li></ul>
 <div class='section'>
 <title></title>
 <h1 class="title">Webhooks API</h1>
