--- a/source/documentation/rest/incidents/index.html
+++ b/source/documentation/rest/incidents/index.html
@@ -5,13 +5,13 @@ permalink: /documentation/rest/incidents/
 redirect_from:
   - /documentation/rest/incidents.html
 ---
-<ul class="breadcrumb"><li><a href="../rest.html">REST API</a></li><span class="divider">/</span><li>Incidents</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li>Incidents</li></ul>
 <div class='section'>
 <title></title>
 <h1 class="title">Incidents API</h1>
 <p>
 <strong>
-Note that to create an incident you need to trigger it through the <a href="../integration/events.html?controller=integration&amp;id=events">events</a> API.
+Note that to create an incident you need to trigger it through the <a href="/documentation/integration/events/">events</a> API.
 </strong>
 </p>
 <p>
@@ -24,7 +24,7 @@ you from being overwhelmed by event storms.
 <p>
 An incident can be open, acknowledged or resolved. Whenever an incident is created, it is assigned
 to a user (according to the escalation process, as described by escalation rules and
-<a href="schedules.html">schedules</a>).
+<a href="/documentation/rest/schedules">schedules</a>).
 The assigned user has a chance to either acknowledge that he is working on it, or to resolve it.
 </p>
 <p>
@@ -33,16 +33,16 @@ If the incident is not resolved by the service's <i>incident ack timeout</i> it 
 </p>
 <p>
 When an incident is triggered or when it is escalated it creates
-<a href="alerts.html">alerts</a> (also known as <i>notifications</i>). Alerts are messages
+<a href="/documentation/rest/alerts">alerts</a> (also known as <i>notifications</i>). Alerts are messages
 containing the details of the incident, and can be sent through SMS, email and phone calls.
 </p>
 <p>
 Incidents and Incident Counts from the last 30 days are returned by default. To change this default date range, see the documentation for the <code>since</code>, <code>until</code> or <code>date_range</code> parameters.
 </p>
-<table class="table action_index"><caption>This API lets you access and manipulate incidents.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="list.html">GET incidents</a></td><td>List existing incidents.</td></tr><tr><td><a href="show.html">GET incidents/:id</a></td><td>Show detailed information about an incident. Accepts either an incident id, or an incident number.</td></tr>
-<tr><td><a href="count.html">GET incidents/count</a></td><td>Count the number of incidents matching certain criteria.</td></tr>
-<tr><td><a href="update.html">PUT incidents</a></td><td>Acknowledge, resolve, escalate or reassign one or more incidents.</td></tr>
-<tr><td><a href="resolve.html">PUT incidents/:id/resolve</a></td><td>Resolve an incident.</td></tr>
-<tr><td><a href="acknowledge.html">PUT incidents/:id/acknowledge</a></td><td>Acknowledge an incident.</td></tr>
-<tr><td><a href="reassign.html">PUT incidents/:id/reassign</a></td><td>Reassign an incident.</td></tr>
+<table class="table action_index"><caption>This API lets you access and manipulate incidents.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="/documentation/rest/incidents/list">GET incidents</a></td><td>List existing incidents.</td></tr><tr><td><a href="/documentation/rest/incidents/show">GET incidents/:id</a></td><td>Show detailed information about an incident. Accepts either an incident id, or an incident number.</td></tr>
+<tr><td><a href="/documentation/rest/incidents/count">GET incidents/count</a></td><td>Count the number of incidents matching certain criteria.</td></tr>
+<tr><td><a href="/documentation/rest/incidents/update">PUT incidents</a></td><td>Acknowledge, resolve, escalate or reassign one or more incidents.</td></tr>
+<tr><td><a href="/documentation/rest/incidents/resolve">PUT incidents/:id/resolve</a></td><td>Resolve an incident.</td></tr>
+<tr><td><a href="/documentation/rest/incidents/acknowledge">PUT incidents/:id/acknowledge</a></td><td>Acknowledge an incident.</td></tr>
+<tr><td><a href="/documentation/rest/incidents/reassign">PUT incidents/:id/reassign</a></td><td>Reassign an incident.</td></tr>
 </tbody></table></div>
