--- a/source/documentation/rest/pagination.html
+++ b/source/documentation/rest/pagination.html
@@ -5,9 +5,8 @@ permalink: /documentation/rest/pagination/
 redirect_from:
   - /documentation/rest/pagination.html
 ---
-<ul class="breadcrumb"><li><a href="../rest.html">REST API</a></li><span class="divider">/</span><li>Pagination</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest.html">REST API</a></li><span class="divider">/</span><li>Pagination</li></ul>
 <div class='section'>
-<title></title>
 <h1 class="title">Pagination</h1>
 <p>
 Most APIs that list resources are paginated. Pagination is consistent across all APIs that require it.
