--- a/source/index.html
+++ b/source/index.html
@@ -19,10 +19,10 @@ layout: index
                         </div>
                         <div class='span6 step'>Extend PagerDuty to fit your operational needs:
                           <ul>
-                            <li>Build an integration with your monitoring tool using our <a href="documentation/integration/events.html">Integration API</a></li>
-                            <li>Trigger actions when an incident is created / modified with <a href="documentation/rest/webhooks.html">webhooks</a></li>
+                            <li>Build an integration with your monitoring tool using our <a href="documentation/integration/events">Integration API</a></li>
+                            <li>Trigger actions when an incident is created / modified with <a href="documentation/rest/webhooks">webhooks</a></li>
                             <li>Integrate PagerDuty and your internal systems with our extensive REST API</li>
-                            <li>Extend an existing <a href="documentation/code/tools.html">tool</a>, build on a <a href="documentation/code.html">code sample</a> or use one of our customer contributed <a href="documentation/code/libraries.html">libraries</a></li>
+                            <li>Extend an existing <a href="documentation/code/tools">tool</a>, build on a <a href="documentation/code">code sample</a> or use one of our customer contributed <a href="documentation/code/libraries">libraries</a></li>
                           </ul>
                         </div>
                       </div>
@@ -93,7 +93,7 @@ Release Notes
 <td class='date'>March 4, 2014</td>
 <td>
 <ul>
-<li>New on-call endpoints are available for <a href="documentation/rest/users/on_call.html">users</a> and <a href="documentation/rest/escalation_policies/on_call.html">escalation policies</a>.</li>
+<li>New on-call endpoints are available for <a href="documentation/rest/users/on_call">users</a> and <a href="documentation/rest/escalation_policies/on_call">escalation policies</a>.</li>
 </ul>
 </td>
 </tr>
@@ -101,12 +101,12 @@ Release Notes
 <td class='date'>August 19, 2013</td>
 <td>
 <ul>
-<li><a href="documentation/rest/incidents.html">New incident endpoints</a> for changing state are available.</li>
+<li><a href="documentation/rest/incidents">New incident endpoints</a> for changing state are available.</li>
 </ul>
 </td>
 </tr>
 </tbody>
 </table>
-<a href="release_notes.html" class="blocky">View all Release Notes</a>
+<a href="/release_notes" class="blocky">View all Release Notes</a>
 </div>
 </div>
